feat(Modulo de Auth): Cambios del aplicativo con respecto al servicio

--- a/src/app/modules/auth/components/form-login/form-login.html
+++ b/src/app/modules/auth/components/form-login/form-login.html
@@ -1,4 +1,5 @@
-<div class="tw:max-w-lg tw:w-full tw:px-5">
+
+  <div class="tw:max-w-lg tw:w-full tw:px-5">
   <div
     style="box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
 -webkit-box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
@@ -56,7 +57,7 @@
           </div>
 
           <div class="tw:text-sm">
-            <a class="tw:font-medium tw:text-gray-800 tw:hover:text-gray-400" href="#">
+            <a class="tw:font-medium tw:text-gray-800 tw:hover:text-gray-400" href="#" routerLink="/auth/change-password">
               Olvidades tu contraseña?
             </a>
           </div>
