--- a/src/app/modules/auth/components/form-register/form-register.html
+++ b/src/app/modules/auth/components/form-register/form-register.html
@@ -12,7 +12,7 @@
         Registrate en ERP_FrontEnd
       </h2>
       <p class="tw:mt-4 tw:text-center tw:text-gray-800">Llena tus datos para continuar</p>
-      <form [formGroup]="getFormRegister" class="tw:mt-8 tw:space-y-6">
+      <form [formGroup]="formRegister" class="tw:mt-8 tw:space-y-6">
         <div class="tw:rounded-md">
           <div class="tw:w-full tw:grid tw:grid-cols-1 tw:md:grid-cols-2 tw:gap-3">
             <mat-form-field appearance="outline" floatLabel="always" class="tw:w-full tw:mb-5">
@@ -82,7 +82,7 @@
                 [type]="hide() ? 'password' : 'text'"
               />
               @if (isValidControl('repeatPassword')) {
-              <mat-error>{{ getError('repeatPassword', 'contraseña') }}</mat-error>
+              <mat-error>{{ getError('repeatPassword', 'contraseñas') }}</mat-error>
               }
               <button matIconButton matSuffix (click)="clickEvent($event)">
                 <mat-icon>{{ hide() ? 'visibility_off' : 'visibility' }}</mat-icon>
@@ -95,7 +95,7 @@
           <button
             class="tw:group tw:relative tw:w-full tw:flex tw:justify-center tw:py-3 tw:px-4 tw:border tw:border-transparent tw:text-sm tw:font-medium tw:rounded-md tw:text-white tw:bg-gray-800 tw:hover:bg-gray-600 tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-offset-2 tw:focus:ring-gray-500"
             type="submit"
-            (click)="onRegister()"
+            (click)="registerUser()"
           >
             Registrate
           </button>
