feat(CardMovie): Implementación componente card movie

--- a/src/app/modules/movie/pages/now-playing/now-playing.html
+++ b/src/app/modules/movie/pages/now-playing/now-playing.html
@@ -1,1 +1,5 @@
-<p>now-playing works!</p>
+<div class="tw:flex tw:justify-center tw:items-center tw:flex-wrap tw:gap-y-8 tw:gap-x-3 tw:py-2">
+  @for (movie of movies(); track $index) {
+    <app-movie-card [movie]="movie" />
+  }
+</div>
