--- a/src/themes/tailwind.css
+++ b/src/themes/tailwind.css
@@ -5,3 +5,7 @@
 @import "tailwindcss/theme.css" layer(theme) prefix(tw);
 /* @import "tailwindcss/preflight.css" layer(base); */
 @import "tailwindcss/utilities.css" layer(utilities);
+
+/*  PrimeNG */
+@plugin "tailwindcss-primeui";
+@import "primeicons/primeicons.css";
