--- a/src/app/modules/movie/components/movie-card/movie-card.html
+++ b/src/app/modules/movie/components/movie-card/movie-card.html
@@ -1,8 +1,3 @@
-<!-- From Uiverse.io by alexruix -->
-<div class="card">
-  <div  class="card-details">
-    <p class="text-title"></p>
-    <p class="text-body">{{movie.title}}</p>
-  </div>
-  <button class="card-button">More info</button>
+<div #movieCard class="card">
+  <button class="card-button">Mas info</button>
 </div>
