--- a/src/app/modules/movie/components/movie-card/movie-card.scss
+++ b/src/app/modules/movie/components/movie-card/movie-card.scss
@@ -1,22 +1,59 @@
-/* From Uiverse.io by alexruix */
+/* From Uiverse.io by eslam-hany */
 .card {
- width: 190px;
- height: 254px;
- border-radius: 20px;
- background: #f5f5f5;
- position: relative;
- padding: 1.8rem;
- border: 2px solid #c3c6ce;
- transition: 0.5s ease-out;
- overflow: visible;
+  position: relative;
+  width: 220px;
+  height: 320px;
+  background: mediumturquoise;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+  font-weight: bold;
+  border-radius: 15px;
+  cursor: pointer;
 }
 
-.card-details {
- color: black;
- height: 100%;
- gap: .5em;
- display: grid;
- place-content: center;
+.card::before,
+.card::after {
+  position: absolute;
+  content: "";
+  width: 20%;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+  font-weight: bold;
+  background-color: var(--p-menubar-background);
+  transition: all 0.5s;
+  text-align: center;
+  color: white;
+  line-height: 1;
+}
+
+.card::before {
+  top: 0;
+  right: 0;
+  border-radius: 0 15px 0 100%;
+}
+
+.card::after {
+  bottom: 0;
+  left: 0;
+  border-radius: 0 100%  0 15px;
+}
+
+.card:hover::before,
+.card:hover:after {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  transition: all 0.5s;
+}
+
+.card:hover:after {
+  content: var(--text-card-movie);
+  padding: 10px !important;
 }
 
 .card-button {
@@ -24,7 +61,7 @@
  width: 60%;
  border-radius: 1rem;
  border: none;
- background-color: #008bf8;
+ background-color: #505050;
  color: #fff;
  font-size: 1rem;
  padding: .5rem 1rem;
@@ -35,23 +72,14 @@
  transition: 0.3s ease-out;
 }
 
-.text-body {
- color: rgb(134, 134, 134);
-}
-
-/*Text*/
-.text-title {
- font-size: 1.5em;
- font-weight: bold;
-}
-
 /*Hover*/
 .card:hover {
- border-color: #008bf8;
  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
 }
 
 .card:hover .card-button {
  transform: translate(-50%, 50%);
+ z-index: 9999;
  opacity: 1;
+ cursor: pointer;
 }
