feat(MovieDetail): Creación de componente movie detail

--- a/src/app/modules/movie/components/movie-card/movie-card.html
+++ b/src/app/modules/movie/components/movie-card/movie-card.html
@@ -1,3 +1,3 @@
 <div #movieCard class="card">
-  <button class="card-button">Mas info</button>
+  <button [routerLink]="[baseUrl, movie.id]" class="card-button">Mas info</button>
 </div>
