--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,3 +42,5 @@ html, body {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@import "primeicons/primeicons.css";
