feat(FormProduct): Formulario de productos

--- a/src/app/modules/product/pages/list-products/list-products.html
+++ b/src/app/modules/product/pages/list-products/list-products.html
@@ -16,4 +16,6 @@
   (onAccionEmit)="accionEvent($event)"
 />
 
-<app-modal-product [visible]="modalProduct().isVisible" [isOpen]="modalProduct" title="producto" />
+@if (modalProduct().isVisible) {
+  <app-modal-product [visible]="modalProduct().isVisible" [isOpen]="modalProduct" />
+}
