--- a/src/app/modules/product/components/modal-product/modal-product.html
+++ b/src/app/modules/product/components/modal-product/modal-product.html
@@ -1,13 +1,13 @@
 <div class="tw:card tw:flex tw:justify-center">
-    <p-dialog [header]="isOpen().data ? 'Editar producto' : 'Guardar producto'" [modal]="true" (onHide)="isOpen.set({ isVisible: false})" [(visible)]="visible" [style]="{ width: '25rem' }">
-        <span class="p-text-secondary block mb-8">Update your information.</span>
-        <div class="tw:flex tw:items-center tw:gap-4 tw:mb-8">
-            <label for="email" class="tw:font-semibold tw:w-24">Nombre</label>
-            <input pInputText id="email" class="flex-auto" autocomplete="off" [value]="isOpen().data?.prodDescripcion" />
+    <p-dialog [header]="isOpen().data ? 'Editar producto' : 'Guardar producto'" [modal]="true" (onHide)="isOpen.set({ isVisible: false})" [(visible)]="visible">
+        <div class="tw:mb-4 pl-4">
+          <span class="p-text-secondary block mb-8">Datos del producto.</span>
         </div>
+        <app-form-product [product]="isOpen().data" />
         <div class="tw:flex tw:ustify-end tw:gap-2">
             <p-button label="Cancel" severity="secondary" (click)="visible = false" />
             <p-button label="Save" (click)="visible = false" />
         </div>
+        <!-- <pre>{{isOpen().data | json}}</pre> -->
     </p-dialog>
 </div>
