feat(UpdateProduct): Actualización de productos

--- a/src/app/modules/product/components/form-product/form-product.html
+++ b/src/app/modules/product/components/form-product/form-product.html
@@ -1,35 +1,70 @@
 <div class="tw:flex tw:items-center tw:gap-4 tw:mb-8">
   <form [formGroup]="formProduct">
     <div class="tw:grid tw:grid-cols-1 tw:md:grid-cols-2 tw:gap-4">
-      <div class="tw:flex tw:flex-col tw:gap-1">
-        <label for="nombreProducto" class="tw:font-semibold ">Nombre del Producto</label>
+      <div class="tw:flex tw:flex-col tw:gap-1 tw:min-w-24 tw:sm:min-w-[300px]">
+        <label for="nombreProducto" class="tw:font-semibold">Nombre del Producto</label>
         <input
           pInputText
+          [pKeyFilter]="alphaNumericSpace"
           id="nombreProducto"
           formControlName="prodDescription"
           autocomplete="off"
         />
       </div>
-      <div class="tw:flex tw:flex-col tw:gap-1">
-        <label for="price" class="tw:font-semibold ">Precio por Unidad</label>
-        <input
-          pInputText
-          id="price"
+      <div class="tw:flex tw:flex-col tw:gap-1 tw:sm:min-w-[300px]">
+        <label for="price" class="tw:font-semibold">Precio por Unidad</label>
+        <p-inputnumber
           formControlName="prodUltPrice"
-          class="flex-auto"
-          autocomplete="off"
+          inputId="currency-us"
+          mode="currency"
+          currency="USD"
+          locale="en-US"
         />
       </div>
-      <div class="tw:flex tw:flex-col tw:gap-1">
-        <label for="category" class="tw:font-semibold ">Categoria</label>
-        <p-select [options]="categories()" formControlName="categoryId"  optionValue="categoriaId" optionLabel="categoriaDescrip" placeholder="Selecciona tu categoria" />
+      <div class="tw:flex tw:flex-col tw:gap-1 tw:sm:min-w-[300px]">
+        <label for="category" class="tw:font-semibold">Categoria</label>
+        <p-select
+          [options]="categories()"
+          formControlName="categoryId"
+          optionValue="categoriaId"
+          optionLabel="categoriaDescrip"
+          placeholder="Selecciona tu categoria"
+        />
       </div>
-      <select name="" id="">
-        <option value=""></option>
-        <option value=""></option>
-        <option value=""></option>
-        <option value=""></option>
-      </select>
+      <div class="tw:flex tw:flex-col tw:gap-1 tw:sm:min-w-[300px]">
+        <label for="company" class="tw:font-semibold">Empresa</label>
+        <p-select
+          [options]="companies()"
+          formControlName="companyId"
+          optionValue="empresaId"
+          optionLabel="empresaNombre"
+          placeholder="Elige la empresa"
+        />
+      </div>
+      <div class="tw:flex tw:flex-col tw:gap-1 tw:sm:min-w-[300px]">
+        <label for="supplier" class="tw:font-semibold">Proveedor</label>
+        <p-select
+          [options]="suppliers()"
+          formControlName="supplierId"
+          optionValue="provId"
+          optionLabel="provNomComercial"
+          placeholder="Elige al proveedor"
+        />
+      </div>
+      <div class="tw:flex tw:flex-col tw:gap-1 tw:sm:min-w-[300px]">
+        <label for="supplier" class="tw:font-semibold">Marca</label>
+        <p-select
+          [options]="brands()"
+          formControlName="brandId"
+          optionValue="marcaId"
+          optionLabel="marcaDescrip"
+          placeholder="Elige la marca"
+        />
+      </div>
+    </div>
+    <div class="tw:flex tw:justify-end tw:gap-2 tw:mt-4">
+      <p-button label="Cancelar" severity="secondary" />
+      <p-button label="Guardar" (onClick)="saveProduct()" />
     </div>
   </form>
 </div>
