--- a/src/app/modules/product/pages/list-products/list-products.html
+++ b/src/app/modules/product/pages/list-products/list-products.html
@@ -1,21 +1,26 @@
-<div class="tw:px-5">
-  <h2 class="tw:border-l-5 tw:pl-2 tw:border-[var(--p-menubar-background)]">
-    Listado de Productos
-  </h2>
-  <p>
-    Panel administrativo para el mantenimiento de los productos previamente registrados en la base
-    de datos de la empresa.
-  </p>
-</div>
+<div class="tw:flex tw:flex-col tw:gap-10">
+  <div class="tw:px-5 tw:mt-5">
+    <h2 class="tw:border-l-5 tw:pl-2 tw:border-[var(--p-menubar-background)]">
+      Listado de Productos
+    </h2>
+    <p>
+      Panel administrativo para el mantenimiento de los productos previamente registrados en la base
+      de datos de la empresa.
+    </p>
+  </div>
 
-<app-custom-table
-  [data]="products()"
-  [columns]="columns"
-  [editable]="true"
-  [delete]="true"
-  (onAccionEmit)="accionEvent($event)"
-/>
+  <div class="tw:mx-1">
+    <app-custom-table
+      [data]="products()"
+      [columns]="columns"
+      [editable]="true"
+      [delete]="true"
+      (onAccionEmit)="accionEvent($event)"
+    />
+  </div>
 
-@if (modalProduct().isVisible) {
+
+  @if (modalProduct().isVisible) {
   <app-modal-product [visible]="modalProduct().isVisible" [isOpen]="modalProduct" />
-}
+  }
+</div>
