--- a/src/app/modules/product/components/form-product/form-product.html
+++ b/src/app/modules/product/components/form-product/form-product.html
@@ -1,4 +1,6 @@
-<div class="tw:flex tw:items-center tw:gap-4 tw:mb-8">
+<div class="tw:flex tw:items-center tw:justify-center tw:gap-4 tw:mb-8 tw:w-full">
+  <!-- <p-toast />
+  <p-confirmdialog /> -->
   <form [formGroup]="formProduct">
     <div class="tw:grid tw:grid-cols-1 tw:md:grid-cols-2 tw:gap-4">
       <div class="tw:flex tw:flex-col tw:gap-1 tw:min-w-24 tw:sm:min-w-[300px]">
@@ -63,7 +65,7 @@
       </div>
     </div>
     <div class="tw:flex tw:justify-end tw:gap-2 tw:mt-4">
-      <p-button label="Cancelar" severity="secondary" />
+      <p-button label="Cancelar" (onClick)="onClose()" severity="secondary" />
       <p-button label="Guardar" (onClick)="saveProduct()" />
     </div>
   </form>
