--- a/src/app/modules/product/components/modal-product/modal-product.html
+++ b/src/app/modules/product/components/modal-product/modal-product.html
@@ -1,4 +1,4 @@
-<div class="tw:card tw:flex tw:justify-center tw:flex-col">
+<div class="tw:card tw:flex tw:flex-col tw:justify-center tw:h-full">
   <div class="tw:mb-4 pl-4">
     <span class="p-text-secondary block mb-8">Datos del producto.</span>
   </div>
