--- a/src/app/modules/product/pages/list-products/list-products.html
+++ b/src/app/modules/product/pages/list-products/list-products.html
@@ -1,16 +1,19 @@
-<div class="tw:flex tw:flex-col tw:gap-5">
-  <div class="tw:px-5 tw:mt-5">
-    <h2 class="tw:border-l-5 tw:pl-2 tw:border-[var(--p-menubar-background)]">
-      Listado de Productos
-    </h2>
-    <p>
-      Panel administrativo para el mantenimiento de los productos previamente registrados en la base
-      de datos de la empresa.
-    </p>
-  </div>
+<p-confirmdialog />
+<div class="tw:flex tw:flex-col tw:gap-5 tw:pt-5">
+  <app-custom-title
+    title="Listado de Productos"
+    subTitle="Panel administrativo para el mantenimiento de los productos previamente registrados en la base
+      de datos de la empresa."
+  />
 
   <div class="tw:flex tw: tw:justify-end tw:px-1">
-    <p-button icon="pi pi-plus" (onClick)="createProduct()" label="Nuevo" [rounded]="true" severity="success" />
+    <p-button
+      icon="pi pi-plus"
+      (onClick)="createProduct()"
+      label="Nuevo"
+      [rounded]="true"
+      severity="success"
+    />
   </div>
 
   <div class="tw:mx-1">
@@ -22,7 +25,6 @@
       (onAccionEmit)="accionEvent($event)"
     />
   </div>
-
 
   <!-- @if (modalProduct().isVisible) {
   <app-modal-product [visible]="modalProduct().isVisible" [isOpen]="modalProduct" />
