feat(tabla): Cambios a funcionalidad operacion XY

--- a/src/app/modules/shared/components/custom-table/custom-table.html
+++ b/src/app/modules/shared/components/custom-table/custom-table.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <p-table [value]="data" [tableStyle]="{ 'min-width': '50rem' }">
+    <p-table [showGridlines]="showGridlines" [value]="data" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template #header>
             <tr>
                 @for (column of columns; track $index) {
@@ -19,7 +19,7 @@
                   <td>
                     @switch (column.format?.type) {
                       @case ('currency') {
-                        {{ ( column.operation?.typeOperate ? operationX(item[column.operation?.field!], column.operation?.field!, column.operation?.args, column.operation?.typeOperate ) : item[column.field] ) | currency }}
+                        {{ ( column.operation?.typeOperate ? operationX(item[column.operation?.field!], column.operation ) : item[column.field] ) | currency }}
                       }
                       @case ('date') {
                         {{ item[column.field] | date:column.format?.params }}
@@ -52,10 +52,10 @@
                    <td [attr.colspan]="col.colspan" class="text-right font-bold p-3 pb-0">
                       @switch (col.format?.type) {
                         @case ('currency') {
-                           {{ (col.operation?.typeOperate ? operationY(col.operation?.typeOperate, col.operation?.field) : col.label) | currency }}
+                           {{ (col.operation?.typeOperate ? operationY(col.operation!) : col.label) | currency }}
                         }
                         @default {
-                          {{ col.operation?.typeOperate ? operationY(col.operation?.typeOperate, col.operation?.field) : col.label }}
+                          {{ col.operation?.typeOperate ? operationY(col.operation!) : col.label }}
                         }
                       }
                   </td>
@@ -65,3 +65,4 @@
         }
     </p-table>
 </div>
+
