fix(CustomTable): Calcular valores de forma dinamica

--- a/src/app/modules/product/pages/list-products/list-products.html
+++ b/src/app/modules/product/pages/list-products/list-products.html
@@ -1,10 +1,9 @@
 <p-confirmdialog />
 <div class="tw:flex tw:flex-col tw:gap-5 tw:pt-5">
   <app-custom-title
-    title="Listado de Productos"
-    subTitle="Panel administrativo para el mantenimiento de los productos previamente registrados en la base
-      de datos de la empresa."
-  />
+    [title]="'Listado de Productos'"
+    [subTitle]="'Panel administrativo para el mantenimiento de los productos previamente registrados en la base de datos de la empresa.'"
+  />'
 
   <div class="tw:flex tw: tw:justify-end tw:px-1">
     <p-button
